--- a/index.html
+++ b/index.html
@@ -1,266 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600&display=swap" rel="stylesheet">
-  <style>
-    /* ===== RESET ===== */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Outfit', sans-serif;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Responsive Portfolio</title>
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600&display=swap" rel="stylesheet">
+<style>
+  * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Outfit', sans-serif; }
+  body { background: #f5f5f5; color: #333; scroll-behavior: smooth; }
 
-    body {
-      line-height: 1.6;
-      background-color: #f5f5f5;
-      color: #333;
-      scroll-behavior: smooth;
-    }
+  a { text-decoration: none; color: inherit; }
 
-    a {
-      text-decoration: none;
-      color: inherit;
-    }
+  header {
+    position: fixed; top: 0; left: 0; width: 100%; background: #001122; color: #fff;
+    display: flex; justify-content: space-between; align-items: center; padding: 1rem 2rem; z-index: 1000;
+  }
 
-    header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      background: #001122;
-      color: #fff;
-      padding: 1rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      z-index: 1000;
-    }
+  .logo { font-weight: 600; font-size: 1.2rem; }
+  nav { display: flex; gap: 1.5rem; }
+  nav a { font-weight: 500; transition: 0.3s; }
+  nav a:hover { color: #ff6b6b; }
 
-    header nav a {
-      margin-left: 1.5rem;
-      font-weight: 500;
-      transition: 0.3s;
-    }
+  /* Hamburger for mobile */
+  .hamburger { display: none; flex-direction: column; gap: 4px; cursor: pointer; }
+  .hamburger div { width: 25px; height: 3px; background: #fff; }
 
-    header nav a:hover {
-      color: #ff6b6b;
-    }
+  section { padding: 100px 20px 60px; width: 100%; }
+  h1, h2 { margin-bottom: 1rem; color: #001122; }
+  h1 { font-size: 2.5rem; }
+  h2 { font-size: 2rem; margin-top: 2rem; }
+  p { margin-bottom: 1rem; line-height: 1.5; }
 
-    section {
-      padding: 100px 20px 60px;
-      max-width: 1000px;
-      margin: auto;
-    }
+  #hero {
+    display: flex; flex-direction: column; align-items: center; justify-content: center;
+    height: 100vh; text-align: center;
+    background: linear-gradient(135deg, #001122, #003366); color: #fff;
+    padding: 0 1rem;
+  }
+  #hero h1 { font-size: 3rem; }
+  #hero p { font-size: 1.2rem; margin: 1rem 0 2rem; }
+  #hero a { padding: 0.75rem 1.5rem; background: #ff6b6b; color: #fff; border-radius: 5px; transition: 0.3s; }
+  #hero a:hover { background: #ff3b3b; }
 
-    h1, h2 {
-      margin-bottom: 1rem;
-      color: #001122;
-    }
+  /* About */
+  #about { background: #fff; }
 
-    h1 {
-      font-size: 2.5rem;
-    }
+  /* Projects */
+  #projects .projects {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1.5rem;
+    margin-top: 2rem;
+  }
+  .project-card {
+    background: #fff; padding: 1rem; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.1); transition: 0.3s;
+  }
+  .project-card:hover { transform: translateY(-5px); box-shadow: 0 10px 20px rgba(0,0,0,0.15); }
+  .project-card img { width: 100%; border-radius: 8px; margin-bottom: 0.75rem; }
 
-    h2 {
-      font-size: 2rem;
-      margin-top: 2rem;
-    }
+  /* Skills */
+  .skills { display: flex; flex-wrap: wrap; gap: 1rem; margin-top: 1rem; }
+  .skill { background: #001122; color: #fff; padding: 0.5rem 1rem; border-radius: 20px; font-size: 0.9rem; }
 
-    p {
-      margin-bottom: 1rem;
-    }
+  /* Contact */
+  .contact-form { display: flex; flex-direction: column; gap: 1rem; margin-top: 1rem; }
+  .contact-form input, .contact-form textarea { padding: 0.75rem; border-radius: 5px; border: 1px solid #ccc; width: 100%; }
+  .contact-form button { padding: 0.75rem; background: #ff6b6b; color: #fff; border: none; border-radius: 5px; cursor: pointer; transition: 0.3s; }
+  .contact-form button:hover { background: #ff3b3b; }
 
-    /* ===== HERO ===== */
-    #hero {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      text-align: center;
-      background: linear-gradient(135deg, #001122, #003366);
-      color: #fff;
-    }
+  footer { text-align: center; padding: 2rem; background: #001122; color: #fff; }
 
-    #hero h1 {
-      font-size: 3rem;
-    }
+  /* Responsive */
+  @media (max-width: 768px) {
+    nav { display: none; flex-direction: column; gap: 1rem; background: #001122; position: absolute; top: 100%; right: 0; width: 200px; padding: 1rem; border-radius: 0 0 0 10px; }
+    nav.active { display: flex; }
+    .hamburger { display: flex; }
+    #hero h1 { font-size: 2rem; }
+    #hero p { font-size: 1rem; }
+  }
 
-    #hero p {
-      font-size: 1.2rem;
-      margin: 1rem 0 2rem;
-    }
-
-    #hero a {
-      padding: 0.75rem 1.5rem;
-      background-color: #ff6b6b;
-      color: #fff;
-      border-radius: 5px;
-      transition: 0.3s;
-    }
-
-    #hero a:hover {
-      background-color: #ff3b3b;
-    }
-
-    /* ===== PROJECTS ===== */
-    .projects {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1.5rem;
-      margin-top: 2rem;
-    }
-
-    .project-card {
-      background: #fff;
-      padding: 1rem;
-      border-radius: 10px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-      transition: 0.3s;
-    }
-
-    .project-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 10px 20px rgba(0,0,0,0.15);
-    }
-
-    .project-card img {
-      width: 100%;
-      border-radius: 8px;
-      margin-bottom: 0.75rem;
-    }
-
-    /* ===== SKILLS ===== */
-    .skills {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1rem;
-      margin-top: 1rem;
-    }
-
-    .skill {
-      background: #001122;
-      color: #fff;
-      padding: 0.5rem 1rem;
-      border-radius: 20px;
-      font-size: 0.9rem;
-    }
-
-    /* ===== CONTACT ===== */
-    .contact-form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      margin-top: 1rem;
-    }
-
-    .contact-form input,
-    .contact-form textarea {
-      padding: 0.75rem;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      width: 100%;
-    }
-
-    .contact-form button {
-      padding: 0.75rem;
-      background-color: #ff6b6b;
-      color: #fff;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-
-    .contact-form button:hover {
-      background-color: #ff3b3b;
-    }
-
-    footer {
-      text-align: center;
-      padding: 2rem;
-      background-color: #001122;
-      color: #fff;
-      margin-top: 2rem;
-    }
-
-    /* ===== RESPONSIVE ===== */
-    @media (max-width: 768px) {
-      header {
-        flex-direction: column;
-      }
-
-      header nav {
-        margin-top: 0.5rem;
-      }
-    }
-  </style>
+  @media (min-width: 1200px) {
+    section { padding: 120px 80px 80px; }
+  }
+</style>
 </head>
 <body>
 
-  <header>
-    <div class="logo">My Portfolio</div>
-    <nav>
-      <a href="#hero">Home</a>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#skills">Skills</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
+<header>
+  <div class="logo">Talha</div>
+  <div class="hamburger" onclick="toggleMenu()">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+  <nav id="nav-links">
+    <a href="#hero">Home</a>
+    <a href="#about">About</a>
+    <a href="#projects">Projects</a>
+    <a href="#skills">Skills</a>
+    <a href="#contact">Contact</a>
+  </nav>
+</header>
 
-  <section id="hero">
-    <h1>Hello, I'm Talha</h1>
-    <p>A passionate developer building awesome web experiences.</p>
-    <a href="#contact">Get in Touch</a>
-  </section>
+<section id="hero">
+  <h1>Hello, I'm Talha</h1>
+  <p>A passionate developer building awesome web experiences.</p>
+  <a href="#contact">Get in Touch</a>
+</section>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet.</p>
-  </section>
+<section id="about">
+  <h2>About Me</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet.</p>
+</section>
 
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="projects">
-      <div class="project-card">
-        <img src="https://via.placeholder.com/300x200" alt="Project 1">
-        <h3>Project 1</h3>
-        <p>Short description of the project goes here.</p>
-      </div>
-      <div class="project-card">
-        <img src="https://via.placeholder.com/300x200" alt="Project 2">
-        <h3>Project 2</h3>
-        <p>Short description of the project goes here.</p>
-      </div>
-      <div class="project-card">
-        <img src="https://via.placeholder.com/300x200" alt="Project 3">
-        <h3>Project 3</h3>
-        <p>Short description of the project goes here.</p>
-      </div>
+<section id="projects">
+  <h2>Projects</h2>
+  <div class="projects">
+    <div class="project-card">
+      <img src="https://via.placeholder.com/300x200" alt="Project 1">
+      <h3>Project 1</h3>
+      <p>Short description of the project goes here.</p>
     </div>
-  </section>
-
-  <section id="skills">
-    <h2>Skills</h2>
-    <div class="skills">
-      <div class="skill">HTML</div>
-      <div class="skill">CSS</div>
-      <div class="skill">JavaScript</div>
-      <div class="skill">React</div>
-      <div class="skill">Three.js</div>
-      <div class="skill">Node.js</div>
+    <div class="project-card">
+      <img src="https://via.placeholder.com/300x200" alt="Project 2">
+      <h3>Project 2</h3>
+      <p>Short description of the project goes here.</p>
     </div>
-  </section>
+    <div class="project-card">
+      <img src="https://via.placeholder.com/300x200" alt="Project 3">
+      <h3>Project 3</h3>
+      <p>Short description of the project goes here.</p>
+    </div>
+  </div>
+</section>
 
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <form class="contact-form">
-      <input type="text" placeholder="Your Name" required>
-      <input type="email" placeholder="Your Email" required>
-      <textarea rows="5" placeholder="Your Message" required></textarea>
-      <button type="su
+<section id="skills">
+  <h2>Skills</h2>
+  <div class="skills">
+    <div class="skill">HTML</div>
+    <div class="skill">CSS</div>
+    <div class="skill">JavaScript</div>
+    <div class="skill">React</div>
+    <div class="skill">Three.js</div>
+    <div class="skill">Node.js</div>
+  </div>
+</section>
+
+ <section id="contact">
+  <h2>Contact Me</h2>
+  <!-- Formspree form -->
+  <form class="contact-form" action="https://formspree.io/f/mwvvkqdw" method="POST">
+    <input type="text" name="name" placeholder="Your Name" required>
+    <input type="email" name="_replyto" placeholder="Your Email" required>
+    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+    <button type="submit">Send Message</button>
+  </form>
+</section>
+ 
+  
+<form class="contact-form" id="contactForm" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+  ...
+</form>
+<p id="successMsg" style="color:green; display:none;">Thank you! Your message has been sent.</p>
+
+<script>
+document.getElementById('contactForm').addEventListener('submit', function(e){
+  e.preventDefault();
+  const form = e.target;
+  fetch(form.action, {
+    method: 'POST',
+    body: new FormData(form),
+    headers: { 'Accept': 'application/json' }
+  }).then(response => {
+    if(response.ok){
+      document.getElementById('successMsg').style.display = 'block';
+      form.reset();
+    } else {
+      alert("Oops! There was a problem.");
+    }
+  });
+});
+</script>
+
+
+<footer>
+  &copy; 2026 Talha. All rights reserved.
+</footer>
+
+<script>
+function toggleMenu() {
+  document.getElementById('nav-links').classList.toggle('active');
+}
+</script>
+
+</body>
+</html>
