--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   <h2>Projects</h2>
   <div class="projects">
     <div class="project-card">
-      <img src="https://via.placeholder.com/300x200" alt="Project 1">
+      <img src="https://drive.google.com/uc?export=view&id=14VI4fmzBNseX4ZpSmQHmRSHz9o2UZTOy" alt="Project 1">
       <h3>Project 1</h3>
       <p>Short description of the project goes here.</p>
     </div>
