--- a/index.html
+++ b/index.html
@@ -52,11 +52,33 @@
     gap: 1.5rem;
     margin-top: 2rem;
   }
-  .project-card {
-    background: #fff; padding: 1rem; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.1); transition: 0.3s;
-  }
-  .project-card:hover { transform: translateY(-5px); box-shadow: 0 10px 20px rgba(0,0,0,0.15); }
-  .project-card img { width: 100%; border-radius: 8px; margin-bottom: 0.75rem; }
+  
+  .projects {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 1.5rem;
+  margin-top: 2rem;
+}
+
+.project-card {
+  background: #fff;
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+  transition: 0.3s;
+}
+
+.project-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 10px 20px rgba(0,0,0,0.15);
+}
+
+.project-card img {
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+  border-radius: 8px;
+}
 
   /* Skills */
   .skills { display: flex; flex-wrap: wrap; gap: 1rem; margin-top: 1rem; }
